tests/__snapshots__/validation-configFile-unknown-options.snap.txt
Error: Unknown option 'cache'.

  1 | {
  2 |   "cache": ["all"],
    |   ~~~~~~~
  3 |   "cacheTrailing": ["all", "best",],
  4 |   "globals": { delay: 123 },
  5 |   "globalsTrailing": { break: true, delay: 123, },

      at ./tstyche.json:2:3

Error: Unknown option 'cacheTrailing'.

  1 | {
  2 |   "cache": ["all"],
  3 |   "cacheTrailing": ["all", "best",],
    |   ~~~~~~~~~~~~~~~
  4 |   "globals": { delay: 123 },
  5 |   "globalsTrailing": { break: true, delay: 123, },
  6 |   "mainBroken":,

      at ./tstyche.json:3:3

Error: Unknown option 'globals'.

  2 |   "cache": ["all"],
  3 |   "cacheTrailing": ["all", "best",],
  4 |   "globals": { delay: 123 },
    |   ~~~~~~~~~
  5 |   "globalsTrailing": { break: true, delay: 123, },
  6 |   "mainBroken":,
  7 |   "rootDir": "./path",

      at ./tstyche.json:4:3

Error: Unknown option 'globalsTrailing'.

  3 |   "cacheTrailing": ["all", "best",],
  4 |   "globals": { delay: 123 },
  5 |   "globalsTrailing": { break: true, delay: 123, },
    |   ~~~~~~~~~~~~~~~~~
  6 |   "mainBroken":,
  7 |   "rootDir": "./path",
  8 |   "silent": false,

      at ./tstyche.json:5:3

Error: Unknown option 'mainBroken'.

  4 |   "globals": { delay: 123 },
  5 |   "globalsTrailing": { break: true, delay: 123, },
  6 |   "mainBroken":,
    |   ~~~~~~~~~~~~
  7 |   "rootDir": "./path",
  8 |   "silent": false,
  9 |   "testFileMatch": ["**/packages/*/__typetests__/*.test.ts"],

      at ./tstyche.json:6:3

Error: Unknown option 'rootDir'.

   5 |   "globalsTrailing": { break: true, delay: 123, },
   6 |   "mainBroken":,
   7 |   "rootDir": "./path",
     |   ~~~~~~~~~
   8 |   "silent": false,
   9 |   "testFileMatch": ["**/packages/*/__typetests__/*.test.ts"],
  10 |   "veryLast": true

       at ./tstyche.json:7:3

Error: Unknown option 'silent'.

   6 |   "mainBroken":,
   7 |   "rootDir": "./path",
   8 |   "silent": false,
     |   ~~~~~~~~
   9 |   "testFileMatch": ["**/packages/*/__typetests__/*.test.ts"],
  10 |   "veryLast": true
  11 | }

       at ./tstyche.json:8:3

Error: Unknown option 'veryLast'.

   8 |   "silent": false,
   9 |   "testFileMatch": ["**/packages/*/__typetests__/*.test.ts"],
  10 |   "veryLast": true
     |   ~~~~~~~~~~
  11 | }
  12 | 

       at ./tstyche.json:10:3

